2024-12-03T12:14:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12139421302 # 687
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-03
* notice: last 14d: unq all: 14 43
* notice: prev accum: outdated-unq outdated-all / unq all: 891 4775 / 904 4816
* notice: next accum: outdated-unq outdated-all / unq all: 891 4775 / 905 4818
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-12-03]

2024-12-03T00:41:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12130651789 # 686
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-03
* notice: last 14d: unq all: 13 41
* notice: prev accum: outdated-unq outdated-all / unq all: 889 4770 / 904 4816
* notice: next accum: outdated-unq outdated-all / unq all: 891 4775 / 904 4816
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-18] / []

2024-12-02T00:41:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12110574615 # 684
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-02
* notice: last 14d: unq all: 15 46
* notice: prev accum: outdated-unq outdated-all / unq all: 889 4770 / 903 4815
* notice: next accum: outdated-unq outdated-all / unq all: 889 4770 / 904 4816
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-01]

2024-12-01T00:48:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12100798564 # 682