@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-12-03T12:14:50Z",
-  "count_outdated" : 4775,
-  "uniques_outdated" : 891,
-  "count" : 4818,
-  "uniques" : 905,
+  "timestamp" : "2024-12-05T00:40:34Z",
+  "count_outdated" : 4787,
+  "uniques_outdated" : 895,
+  "count" : 4819,
+  "uniques" : 906,
   "views" : [
-    {
-      "timestamp": "2024-11-20T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 9, 12 ],
-      "count_decinc": [ 0, 12 ],
-      "uniques": 4,
-      "uniques_minmax": [ 2, 4 ],
-      "uniques_decinc": [ 0, 4 ]
-    },
     {
       "timestamp": "2024-11-21T00:00:00Z",
       "count": 10,
@@ -82,6 +73,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
