@@ -1,12 +1,7 @@
 {
-  "count": 43,
-  "uniques": 14,
+  "count": 32,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2024-11-20T00:00:00Z",
-      "count": 12,
-      "uniques": 4
-    },
     {
       "timestamp": "2024-11-21T00:00:00Z",
       "count": 10,
@@ -45,6 +40,11 @@
     {
       "timestamp": "2024-12-03T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-04T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
