@@ -1,3 +1,12 @@
+2024-12-05T00:40:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12170968364 # 690
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-05
+* notice: last 14d: unq all: 11 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 891 4775 / 905 4818
+* notice: next accum: outdated-unq outdated-all / unq all: 895 4787 / 906 4819
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-11-20] / [2024-12-04]
+
 2024-12-03T12:14:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12139421302 # 687
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-03
